--- a/package.json
+++ b/package.json
@@ -1,10 +1,49 @@
 {
   "name": "contagion",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Simple yet flexible compartment model for epidemic simulations",
   "author": {
     "name": "Enys Mones",
     "email": "enys.mones@gmail.com",
     "url": "enysmones.com"
+  },
+  "license": "MIT",
+  "module": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/synesenom/contagion"
+  },
+  "dependencies": {
+    "chai": "^4.2.0",
+    "chalk": "^4.1.0",
+    "coveralls": "^3.1.0",
+    "cross-env": "^7.0.2",
+    "documentation": "^13.0.2",
+    "eslint": "^7.4.0",
+    "eslint-config-standard": "^14.1.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^8.0.1",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^2.0.4",
+    "npm": "^6.14.6",
+    "nyc": "^15.1.0",
+    "standard": "^14.3.4",
+    "test-console": "^1.1.0"
+  },
+  "nyc": {
+    "exclude": [
+      "test"
+    ],
+    "include": [
+      "src/**/*.js"
+    ],
+    "sourceMap": false
+  },
+  "scripts": {
+    "standard": "./node_modules/.bin/standard --fix src/**/*.js",
+    "test:log": "./node_modules/.bin/_mocha test/log.js",
+    "test": "./node_modules/.bin/_mocha --reporter min",
+    "coverage": "cross-env NODE_ENV=test nyc --reporter=text --reporter=html _mocha --recursive",
+    "coveralls": "cross-env NODE_ENV=test nyc --reporter=text-lcov _mocha --recursive | coveralls"
   }
 }
