--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "url": "https://github.com/synesenom/contagion"
   },
   "dependencies": {
+    "chalk": "^4.1.0"
+  },
+  "devDependencies": {
     "chai": "^4.2.0",
-    "chalk": "^4.1.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "documentation": "^13.0.2",
