--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "url": "https://github.com/synesenom/contagion"
   },
   "dependencies": {
-    "chalk": "^4.1.0"
+    "chalk": "^4.1.0",
+    "csv-writer": "^1.6.0",
+    "d3-dsv": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -26,6 +28,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^8.0.1",
     "mocha-lcov-reporter": "^1.3.0",
+    "mock-stdin": "^1.0.0",
     "nodemon": "^2.0.4",
     "npm": "^6.14.6",
     "nyc": "^15.1.0",
@@ -44,6 +47,7 @@
   "scripts": {
     "standard": "./node_modules/.bin/standard --fix src/**/*.js",
     "test:log": "./node_modules/.bin/_mocha test/log.js",
+    "test:io": "./node_modules/.bin/_mocha test/io.js",
     "test": "./node_modules/.bin/_mocha --reporter min",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=text --reporter=html _mocha --recursive",
     "coveralls": "cross-env NODE_ENV=test nyc --reporter=text-lcov _mocha --recursive | coveralls"
