--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^2.0.4",
     "npm": "^6.14.6",
     "nyc": "^15.1.0",
+    "sinon": "^9.0.3",
     "standard": "^14.3.4",
     "test-console": "^1.1.0"
   },
