:sparkles: Parameter setters added to network

--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
   },
   "scripts": {
     "standard": "./node_modules/.bin/standard --fix src/**/*.js",
-    "test:log": "./node_modules/.bin/_mocha test/log.js",
     "test:io": "./node_modules/.bin/_mocha test/io.js",
+    "test:log": "./node_modules/.bin/_mocha test/log.js",
+    "test:network": "./node_modules/.bin/_mocha test/network.js",
     "test": "./node_modules/.bin/_mocha --reporter min",
     "coverage": "cross-env NODE_ENV=test nyc --reporter=text --reporter=html _mocha --recursive",
     "coveralls": "cross-env NODE_ENV=test nyc --reporter=text-lcov _mocha --recursive | coveralls"
