:sparkles: load functionality added to Network

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "csv-writer": "^1.6.0",
+    "d3-collection": "^1.0.7",
     "d3-dsv": "^1.2.0"
   },
   "devDependencies": {
